// =============================================================================
// Branch Handler - HTTP handlers for design branch operations.
// =============================================================================
// This handler manages design branches/variants for scenes.
// Branches enable version control and A/B comparison of design alternatives.
//
// Branch Workflow:
//   1. Scene has a "main" branch by default
//   2. Users can create new branches from main or other branches
//   3. Branches can be compared, merged, or archived
//   4. Only one branch can be "main" at a time
//
// =============================================================================
package handlers

import (
	"encoding/json"
	"net/http"
	"strconv"

	"github.com/xiiisorate/granula_api/api-gateway/internal/dto"
)

// =============================================================================
// BranchHandler handles branch-related HTTP requests.
// =============================================================================

// BranchHandler provides HTTP handlers for design branch operations.
type BranchHandler struct {
	// branchClient pb.BranchServiceClient
}

// NewBranchHandler creates a new BranchHandler.
func NewBranchHandler() *BranchHandler {
	return &BranchHandler{}
}

// =============================================================================
// Branch CRUD Endpoints
// =============================================================================

// ListBranches godoc
// @Summary Список веток
// @Description Возвращает список всех веток дизайна для сцены
// @Tags branches
// @Accept json
// @Produce json
// @Param scene_id query string true "ID сцены" format(uuid)
// @Param status query string false "Фильтр по статусу" Enums(active, archived, merged)
// @Param page query int false "Номер страницы" default(1)
// @Param page_size query int false "Размер страницы" default(20)
// @Success 200 {object} object "Список веток"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Сцена не найдена"
// @Security BearerAuth
// @Router /branches [get]
func (h *BranchHandler) ListBranches(w http.ResponseWriter, r *http.Request) {
	sceneID := r.URL.Query().Get("scene_id")
	if sceneID == "" {
		respondError(w, http.StatusBadRequest, "MISSING_PARAM", "scene_id is required")
		return
	}

	page, _ := strconv.Atoi(r.URL.Query().Get("page"))
	if page < 1 {
		page = 1
	}
	pageSize, _ := strconv.Atoi(r.URL.Query().Get("page_size"))
	if pageSize < 1 || pageSize > 100 {
		pageSize = 20
	}

	// TODO: Call branch gRPC service

	response := map[string]interface{}{
		"branches": []dto.BranchResponse{},
		"pagination": dto.PaginationResponse{
			Page:     page,
			PageSize: pageSize,
			Total:    0,
		},
	}

	respondJSON(w, http.StatusOK, response)
}

// CreateBranch godoc
// @Summary Создать ветку
// @Description Создает новую ветку дизайна от существующей ветки
// @Tags branches
// @Accept json
// @Produce json
// @Param scene_id query string true "ID сцены" format(uuid)
// @Param request body dto.CreateBranchRequest true "Данные ветки"
// @Success 201 {object} dto.BranchResponse "Созданная ветка"
// @Failure 400 {object} dto.ErrorResponse "Ошибка валидации"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Доступ запрещен"
// @Failure 404 {object} dto.ErrorResponse "Сцена или родительская ветка не найдена"
// @Security BearerAuth
// @Router /branches [post]
func (h *BranchHandler) CreateBranch(w http.ResponseWriter, r *http.Request) {
	sceneID := r.URL.Query().Get("scene_id")
	if sceneID == "" {
		respondError(w, http.StatusBadRequest, "MISSING_PARAM", "scene_id is required")
		return
	}

	var req dto.CreateBranchRequest
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		respondError(w, http.StatusBadRequest, "INVALID_JSON", "Invalid request body")
		return
	}

	// TODO: Call branch gRPC service

	response := dto.BranchResponse{
		ID:      "branch-placeholder-id",
		SceneID: sceneID,
		Name:    req.Name,
		Status:  "active",
		IsMain:  false,
	}

	respondJSON(w, http.StatusCreated, response)
}

// GetBranch godoc
// @Summary Получить ветку
// @Description Возвращает информацию о ветке по ID
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Success 200 {object} dto.BranchResponse "Данные ветки"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id} [get]
func (h *BranchHandler) GetBranch(w http.ResponseWriter, r *http.Request) {
	// TODO: Call branch gRPC service

	response := dto.BranchResponse{
		ID:     "branch-id",
		Name:   "Sample Branch",
		Status: "active",
		IsMain: false,
	}

	respondJSON(w, http.StatusOK, response)
}

// UpdateBranch godoc
// @Summary Обновить ветку
// @Description Обновляет название и описание ветки
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Param request body object true "Данные для обновления"
// @Success 200 {object} dto.BranchResponse "Обновленная ветка"
// @Failure 400 {object} dto.ErrorResponse "Ошибка валидации"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id} [patch]
func (h *BranchHandler) UpdateBranch(w http.ResponseWriter, r *http.Request) {
	var req map[string]interface{}
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		respondError(w, http.StatusBadRequest, "INVALID_JSON", "Invalid request body")
		return
	}

	// TODO: Call branch gRPC service

	response := dto.BranchResponse{
		ID:     "branch-id",
		Status: "active",
	}

	respondJSON(w, http.StatusOK, response)
}

// DeleteBranch godoc
// @Summary Удалить ветку
// @Description Удаляет ветку (нельзя удалить main ветку)
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Success 200 {object} dto.SuccessResponse "Ветка удалена"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Нельзя удалить main ветку"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id} [delete]
func (h *BranchHandler) DeleteBranch(w http.ResponseWriter, r *http.Request) {
	// TODO: Call branch gRPC service

	respondJSON(w, http.StatusOK, dto.SuccessResponse{
		Success: true,
		Message: "Branch deleted successfully",
	})
}

// =============================================================================
// Branch Operations
// =============================================================================

// CompareBranches godoc
// @Summary Сравнить ветки
// @Description Сравнивает две ветки и возвращает различия
// @Tags branches
// @Accept json
// @Produce json
// @Param branch1_id query string true "ID первой ветки" format(uuid)
// @Param branch2_id query string true "ID второй ветки" format(uuid)
// @Success 200 {object} dto.CompareBranchesResponse "Результат сравнения"
// @Failure 400 {object} dto.ErrorResponse "Ветки должны принадлежать одной сцене"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/compare [get]
func (h *BranchHandler) CompareBranches(w http.ResponseWriter, r *http.Request) {
	branch1ID := r.URL.Query().Get("branch1_id")
	branch2ID := r.URL.Query().Get("branch2_id")

	if branch1ID == "" || branch2ID == "" {
		respondError(w, http.StatusBadRequest, "MISSING_PARAM", "branch1_id and branch2_id are required")
		return
	}

	// TODO: Call branch gRPC service

	response := dto.CompareBranchesResponse{
		Branch1: dto.BranchSummaryResponse{
			ID:           branch1ID,
			Name:         "Вариант 1",
			ElementCount: 42,
			TotalArea:    78.5,
		},
		Branch2: dto.BranchSummaryResponse{
			ID:           branch2ID,
			Name:         "Вариант 2",
			ElementCount: 45,
			TotalArea:    80.2,
		},
		Differences: []dto.DifferenceResponse{
			{
				Type:        "modified",
				ElementID:   "element-123",
				ElementType: "wall",
				Description: "Изменена позиция стены",
			},
			{
				Type:        "added",
				ElementID:   "element-456",
				ElementType: "door",
				Description: "Добавлена дверь",
			},
		},
		DifferenceCount: 2,
	}

	respondJSON(w, http.StatusOK, response)
}

// MergeBranch godoc
// @Summary Слить ветку в main
// @Description Сливает изменения ветки в main ветку
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки для слияния" format(uuid)
// @Param request body object true "Параметры слияния"
// @Success 200 {object} object "Результат слияния"
// @Failure 400 {object} dto.ErrorResponse "Ошибка слияния (конфликты)"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Доступ запрещен"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id}/merge [post]
func (h *BranchHandler) MergeBranch(w http.ResponseWriter, r *http.Request) {
	var req map[string]interface{}
	json.NewDecoder(r.Body).Decode(&req) // Optional body

	// TODO: Call branch gRPC service

	response := map[string]interface{}{
		"success":        true,
		"merged_changes": 5,
		"conflicts":      0,
		"message":        "Branch merged successfully",
	}

	respondJSON(w, http.StatusOK, response)
}

// SetMainBranch godoc
// @Summary Сделать ветку главной
// @Description Устанавливает ветку как main (основную)
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Success 200 {object} dto.BranchResponse "Обновленная ветка"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Доступ запрещен"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id}/set-main [post]
func (h *BranchHandler) SetMainBranch(w http.ResponseWriter, r *http.Request) {
	// TODO: Call branch gRPC service

	response := dto.BranchResponse{
		ID:     "branch-id",
		IsMain: true,
		Status: "active",
	}

	respondJSON(w, http.StatusOK, response)
}

// ArchiveBranch godoc
// @Summary Архивировать ветку
// @Description Архивирует ветку (нельзя архивировать main)
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Success 200 {object} dto.BranchResponse "Архивированная ветка"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Нельзя архивировать main ветку"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id}/archive [post]
func (h *BranchHandler) ArchiveBranch(w http.ResponseWriter, r *http.Request) {
	// TODO: Call branch gRPC service

	response := dto.BranchResponse{
		ID:     "branch-id",
		Status: "archived",
	}

	respondJSON(w, http.StatusOK, response)
}

// RestoreBranch godoc
// @Summary Восстановить ветку
// @Description Восстанавливает архивированную ветку
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Success 200 {object} dto.BranchResponse "Восстановленная ветка"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id}/restore [post]
func (h *BranchHandler) RestoreBranch(w http.ResponseWriter, r *http.Request) {
	// TODO: Call branch gRPC service

	response := dto.BranchResponse{
		ID:     "branch-id",
		Status: "active",
	}

	respondJSON(w, http.StatusOK, response)
}

// =============================================================================
// Branch History
// =============================================================================

// GetBranchHistory godoc
// @Summary История изменений ветки
// @Description Возвращает историю изменений в ветке
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Param page query int false "Номер страницы" default(1)
// @Param page_size query int false "Размер страницы" default(50)
// @Success 200 {object} object "История изменений"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Ветка не найдена"
// @Security BearerAuth
// @Router /branches/{id}/history [get]
func (h *BranchHandler) GetBranchHistory(w http.ResponseWriter, r *http.Request) {
	page, _ := strconv.Atoi(r.URL.Query().Get("page"))
	if page < 1 {
		page = 1
	}
	pageSize, _ := strconv.Atoi(r.URL.Query().Get("page_size"))
	if pageSize < 1 || pageSize > 100 {
		pageSize = 50
	}

	// TODO: Call branch gRPC service

	response := map[string]interface{}{
		"history": []map[string]interface{}{},
		"pagination": dto.PaginationResponse{
			Page:     page,
			PageSize: pageSize,
			Total:    0,
		},
	}

	respondJSON(w, http.StatusOK, response)
}

// RevertToCommit godoc
// @Summary Откатить к версии
// @Description Откатывает ветку к определенной версии в истории
// @Tags branches
// @Accept json
// @Produce json
// @Param id path string true "ID ветки" format(uuid)
// @Param commit_id path string true "ID коммита/версии" format(uuid)
// @Success 200 {object} dto.BranchResponse "Откаченная ветка"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Ветка или версия не найдена"
// @Security BearerAuth
// @Router /branches/{id}/revert/{commit_id} [post]
func (h *BranchHandler) RevertToCommit(w http.ResponseWriter, r *http.Request) {
	// TODO: Call branch gRPC service

	response := dto.BranchResponse{
		ID:     "branch-id",
		Status: "active",
	}

	respondJSON(w, http.StatusOK, response)
}

